# pipeline-lens

./: .gitignore  .trivyignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
docs/: graph-subsystem-map.md  phase2-graph-model.md
docs/superpowers/plans/: 2026-07-04-supply-chain-insights-engine-v1.md  2026-07-16-graph-explorer.md  2026-07-17-graph-explorer-ux-redesign.md  2026-07-18-github-ingest.md  2026-07-19-edge-label-toggle.md  2026-07-19-github-ingest-multirepo.md  2026-07-19-graph-label-polish.md  2026-07-19-graph-node-shapes.md  2026-07-20-real-package-dependencies.md
docs/superpowers/specs/: 2026-07-16-graph-explorer-design.md  2026-07-17-graph-explorer-ux-design.md  2026-07-18-github-ingest-design.md  2026-07-19-edge-label-toggle-design.md  2026-07-19-github-ingest-multirepo-design.md  2026-07-19-graph-label-polish-design.md  (+4 more)
src/scie/: bridge.py  db.py  events.py  models.py  seed.py  status.py  store.py  synthetic.py  worker.py
src/scie/api/: app.py  (+1 more)
terraform/: .terraform.lock.hcl  budgets.tf  ecr.tf  eks.tf  iam.tf  k8s.tf  main.tf  terraform.auto.tfvars  tf  variables.tf
tests/: graph_fakes.py  test_activities.py  test_api.py  test_bridge.py  test_build_history_view.py  test_events.py  test_github_ingest.py  test_github_webhook_parsing.py  test_graph_db.py  test_graph_queries.py  test_graph_render.py  test_graph_routes.py  test_graph_schema.py  test_graph_seed.py  test_graph_synthetic.py  test_models.py  test_pipeline_run_workflow.py  test_status.py  test_store.py  test_synthetic.py  test_worker.py
(+13 files in other folders)
