[project]
name = "scie"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Mark", email = "mark@dev.local" }
]
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.43.40",
    "confluent-kafka>=2.15.0",
    "fastapi>=0.139.0",
    "httpx>=0.28.1",
    "kubernetes>=36.0.2",
    "pydantic>=2.13.4",
    "sqlmodel>=0.0.39",
    "streamlit>=1.58.0",
    "temporalio>=1.30.0",
    "uvicorn[standard]>=0.50.0",
]

[build-system]
requires = ["uv_build>=0.11.26,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
]
